@@ -5,13 +5,42 @@
 pa_server_port=8888
 
 # Files loaded from disk will be cached
-pa_caching_file_enabled=true
-
-# prompt for login, use the "username;password" credentials from "./config/credentials.csv"
-pa_enable_authentication=false
+pa_caching_file_enabled=false
 
 # Number of maximum parallel analysis allowed
 pa_analysis_threads=10
+
+#============================================
+# Login
+#============================================
+# Choose if you want to prompt for login
+pa_authentication_enabled=false
+
+# Choose authentication method and set the respective settings
+#   - "CSV":  Use the "username;password" credentials from a file
+#   - "LDAP": Authenticate against a directory
+authentication_method=CSV
+
+# ===== CSV Settings =====
+# The file containing "username;password" credentials
+authentication_csv_file=./config/credentials.csv
+
+# ===== LDAP Settings =====
+# The URL of the LDAP which shoulc be used for authentication
+authentication_ldap_url=ldap://localhost:10389
+
+# The DN of the ldap account used to query the directory
+authentication_ldap_user=uid=admin,ou=system
+
+#The password for above user
+authentication_ldap_password=secret
+
+# The DN of the ldap entry where the users are stored in
+authentication_ldap_searchbase=ou=users,dc=example,dc=com
+
+# The name of the attribute storing the username used for authentication
+authentication_ldap_user_attribute=userid
+
 
 ############################################################
 # Database Settings
