@@ -11,6 +11,11 @@
 		<label for="harFile">URL(HTTP or HTTPS):</label> 
 		<input type="text" class="form-control" name="analyzeurl" id="analyzeurl" />
 	</div>
-		
+	
+	<div class="form-group">
+		<label for="saveResults">Save Results</label> 
+		<input type="checkbox" name="saveResults" id="saveResults" checked="checked" />
+	</div>		
+	
 	<input type="submit" class="form-control" value="Submit">
 </form>
