@@ -15,9 +15,14 @@
 <form class="form" enctype="multipart/form-data" method="post">
 	
 	<div class="form-group">
-		<label for="harFile">Select HAR File(max. 100MB):</label> <input type="file"
-			class="form-control" name="harFile" id="harFile" />
+		<label for="harFile">Select HAR File(max. 100MB):</label> 
+		<input type="file" class="form-control" name="harFile" id="harFile" />
 	</div>
-		
+	
+	<div class="form-group">
+		<label for="saveResults">Save Results</label> 
+		<input type="checkbox" name="saveResults" id="saveResults" checked="checked" />
+	</div>	
+	
 	<input type="submit" class="form-control" value="Submit">
 </form>
