@@ -1,0 +1,6 @@
+package com.pengtoolbox.pageanalyzer.login;
+
+public interface LoginProvider {
+
+	public boolean checkCredentials(String username, String password);
+}
