@@ -13,6 +13,7 @@ import javax.servlet.http.HttpSession;
 import com.pengtoolbox.pageanalyzer._main.PA;
 import com.pengtoolbox.pageanalyzer._main.SessionData;
 import com.pengtoolbox.pageanalyzer.logging.PALogger;
+import com.pengtoolbox.pageanalyzer.login.LoginFacade;
 import com.pengtoolbox.pageanalyzer.response.TemplateHTMLDefault;
 import com.pengtoolbox.pageanalyzer.utils.FileUtils;
 
@@ -22,45 +23,14 @@ public class LoginServlet extends HttpServlet
 	private static final long serialVersionUID = 1L;
 	
 	private static Logger logger = PALogger.getLogger(LoginServlet.class.getName());
-
-	private static HashMap<String, String> userCredentials = null;
-	
-	private static final String CREDENTIAL_FILE_PATH = "./config/credentials.csv";
 	
 	public LoginServlet() {
 		
-		if(userCredentials == null) {
-			LoginServlet.loadCredentials();
-		}
+
 		
 	}
 	
-	private static void loadCredentials() {
-		PALogger log = new PALogger(logger, null).method("loadCredentials");
-		
-		//------------------------------
-		// Load File
-		String credentials = FileUtils.getFileContent(null, CREDENTIAL_FILE_PATH);
-		
-		if(credentials == null) {
-			log.severe("Credential file could not be loaded: "+CREDENTIAL_FILE_PATH);
-			return;
-		}
-		
-		//------------------------------
-		// Read Credentials
-		String[] lines = credentials.split("\n|\r\n");
-		
-		userCredentials = new HashMap<String, String>();
-		for(String line : lines) {
-			String[] userAndPW = line.split(";");
-			if(userAndPW.length == 2) {
-				userCredentials.put(userAndPW[0], userAndPW[1]);
-			}else {
-				log.severe("Error loading user credentials.");
-			}
-		}
-	}
+
 		
 	/*****************************************************************
 	 *
@@ -102,9 +72,7 @@ public class LoginServlet extends HttpServlet
 			html.addAlert(PA.ALERT_ERROR, "Please specify a username and password.");
 		}else {
 			
-			String passwordFromFile = userCredentials.get(username);
-			
-			if(password.equals(passwordFromFile)) {
+			if(LoginFacade.getInstance().checkCredentials(username, password)) {
 				//Login success
 				HttpSession session = request.getSession();
 				SessionData data = (SessionData)session.getAttribute(PA.SESSION_DATA); 
