@@ -1,6 +1,7 @@
 ########################################
 # Page Analyzer in progress
 ########################################
+- added save results checkbox
 
 ########################################
 # Page Analyzer v 1.0
